tests/pos/todo/simple/obj-03.ts

var obj = { f: 1 };

obj.f = 2;

assert(obj.f > 0);

